[tool.poetry]
name = "pyferno"
version = "1.5.2"
description = "PyFerno - the async/promise library for running Python 3 async tasks"
authors = ["Sven Varkel <sven@prototypely.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/svenvarkel/pyferno"
homepage = "https://github.com/svenvarkel/pyferno"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7"
tqdm = "^4.62.3"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
